--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /web/bundles/
-/src/Acme/
+/src/__Acme_/
 /app/bootstrap.php.cache
 /app/cache/*
 /app/config/parameters.yml
@@ -10,3 +10,5 @@
 /vendor/
 /bin/
 /composer.phar
+/.nb-meta/
+/.settings/
